# maki

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  Untitled.ipynb  block.txt  example.py  imgui.ini  maki_showcase-Copy1.ipynb  maki_showcase.ipynb
.ipynb_checkpoints/: maki_showcase-checkpoint.ipynb  maki_showcase_first-checkpoint.ipynb
maki/: CMakeLists.txt
maki/include/: maki.h
maki/res/shaders/: simple_fragment.glsl  simple_vertex.glsl
maki/src/: maki.cpp  pch.h
maki/src/core/: camera_driver.cpp  camera_driver.h  definitions.h  interface.cpp  interface.h  log.cpp  log.h  log.h.bak  render_driver.cpp  render_driver.h  stringifier.cpp
maki/src/platform/: event.h  window.cpp  window.h
maki/src/platform/glfw/: glfw_window.cpp
maki/src/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h  types.h  vertex_array.cpp  vertex_array.h
maki/src/renderer/open_gl/: open_gl_renderer.cpp  open_gl_renderer.h  opengl_buffer.cpp  opengl_renderer.cpp  opengl_shader.cpp  opengl_vertex_array.cpp  opengl_vertex_array.h
maki/src/renderer/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_renderer.cpp  opengl_renderer.h  opengl_shader.cpp  opengl_shader.h  opengl_vertex_array.cpp  opengl_vertex_array.h
maki_core/: CMakeLists.txt
maki_core/include/: maki.h
maki_core/res/shaders/: cuboid_frag.glsl  cuboid_vert.glsl  simple_fragment.glsl  simple_vertex.glsl
maki_core/src/: pch.h
maki_core/src/atom/: atom.cpp  atom.h  atom_chain.h  atom_diff.h  atom_diff_frame.h  atom_diff_lifetime.h  atom_dispenser.cpp  atom_dispenser.h  atom_renderer.h  container.h
maki_core/src/atom/atoms/: cuboid_atom.cpp  cuboid_atom.h  quadrilateral_atom.cpp  quadrilateral_atom.h
maki_core/src/atom/renderers/: batch_renderer.cpp  batch_renderer.h  cuboid_renderer.cpp  cuboid_renderer.h  quadrilateral_renderer.cpp  quadrilateral_renderer.h
maki_core/src/core/: camera_driver.cpp  definitions.h  interface.h  log.h  render_driver.cpp  render_driver.h  stringifier.h  thread_safety.cpp  thread_safety.h
maki_core/src/driver/: camera_driver.cpp  camera_driver.h  cuboid_renderer.cpp  cuboid_renderer.h  interface.h  render_driver.cpp  render_driver.h  render_driver_control.cpp  render_driver_control_thread.cpp  render_driver_render.cpp  render_driver_render_thread.cpp  render_thread.cpp  render_thread.h
maki_core/src/platform/: enums.h  event.h  keys.h  window.cpp  window.h
maki_core/src/platform/glfw/: glfw_window.cpp
maki_core/src/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h
maki_core/src/renderer/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_renderer.cpp  opengl_renderer.h  opengl_shader.cpp  opengl_stringifier.cpp  opengl_stringifier.h  opengl_types.h  opengl_vertex_array.cpp  opengl_vertex_array.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
stub/: CMakeLists.txt
stub/src/: main.cpp
test/: CMakeLists.txt
test/res/shaders/: simple_fragment.glsl  simple_vertex.glsl
test/shaders/: simple_fragment.glsl  simple_vertex.glsl
test/src/: controls.cpp  controls.h  load_shader.cpp  load_shader.h  load_texture.cpp  load_texture.h  main.cpp  pch.h  shader.cpp  shader.h
